# timetables-v2

./: README.md
SearchTesting/: AWS_script.js  index.html  script.js
frontend-v2/: fuzzy.cjs  package-lock.json  package.json
frontend-v2/src/: index.css  main.tsx  utils.ts
frontend-v2/src/components/: LoadingSpinner.tsx  Sidebar.tsx  Timetable.tsx
frontend-v2/src/examples/: zustand-router-undefined.tsx
frontend-v2/src/interfaces/: lessons.ts  timetable.ts
frontend-v2/src/purgatory/: Sidebar.tsx  info.txt
frontend-v2/src/routes/: Home.tsx  Root.tsx  Timetable.tsx  TimetableDisplay.tsx
frontend-v2/src/stores/: lessonsStore.ts
frontend-v3/: index.html  package-lock.json  package.json  vite.config.ts
frontend-v3/mock_data/: data.ts
frontend-v3/src/: main.tsx  utils.ts
frontend-v3/src/components/: Siderbar.tsx
frontend-v3/src/interfaces/: course.ts  timetable.ts
frontend-v3/src/routes/: Home.tsx  Root.tsx  TimetableDisplay.tsx
frontend-v3/src/stores/: courseStore.ts
frontend/src/: App.tsx  main.tsx
frontend/src/routes/: Root.tsx  Timetable.tsx
lambdas/reqwest-test/: Cargo.toml
lambdas/timetable-scraping/: Cargo.toml
lambdas/timetable-scraping-on-render/: Cargo.toml
lambdas/timetable-scraping-on-render/public/: index.html
lambdas/timetable-scraping-on-render/public-real/: hi.html
lambdas/timetable-scraping-on-render/public/assets/: index-BEkEruPi.js  index-DHuhhW2g.js  index-DcRuoDPh.js
lambdas/timetable-scraping-on-render/src/: main.rs  weekday.rs
lambdas/timetable-scraping/src/: main.rs  parsing.rs  url.rs
(+7 files in other folders)
