[package]
name = "timetable-scraping-on-render"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
percent-encoding = "2.3.1"
regex = "1.10.4"
reqwest = { version = "0.12.3" }
scraper = "0.19.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
thiserror = "1.0.58"
tokio = { version = "1", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
axum = "0.7.5"
tower-http = { version = "0.5", features = ["fs", "cors"] }
